# Animated-Bar-Chart

./: .gitignore  CMakeLists.txt  application.cpp  bar.h  barchart.h  barchartanimate.h  makefile  tests.cpp
